# aurorachain

./: README.md
build_msvc/: bitcoin_config.h
doc/man/: Makefile.am  litecoin-cli.1  litecoin-qt.1  litecoin-tx.1  litecoin-wallet.1  litecoind.1
src/: bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  chainparams.cpp  clientversion.cpp  validation.cpp  version.h
src/consensus/: consensus.h
src/libmw/include/mw/consensus/: Params.h
src/qt/: bitcoinunits.cpp  splashscreen.cpp
src/qt/forms/: overviewpage.ui
